# cls

./: .gitignore  .swo  .swp  README.md  clsengine.py  list_tasks.txt  main.py  openproject.cmd  test.py  test.scls  test_python_script.py
CLS/: casm.py  ccls.cmd  ccls.py  clsengine.py  cpkg.conf  cpkg.py  lib.scls  main.py  test.casm  test.scls  test_app.cobj  test_app.json  test_python_script.py
CLS/cache/: final.py  lib.json  lib.py  log.json
CLS/clsengine/: ObjectCls.py  chars.py  clsengine.py  gen_char.py  tools.py
CLS/examples/apptest1/: app.json  main.scls
CLS/examples/apptest1/cache/: final.py  lib.json  lib.py  log.json
CLS/lib/: prueba.scls
CLS/libpy/: fs.py  os.py  req.py  stdpyapi.py
CLS/py/: libtest.py
CLS/std/std/: fs  os  request
CLS/template/godot/underdom/battle/: character.gd  obstacle.gd
CLS/template/std/: stdio.py
CLS/transpiled/godot/: clsmod.py
CLS/web/: main.html
CLS1.2-EXPERIMENTAL/: build.cmd  main.ccls  ncls.py  pyproject.toml  setup.py
CLS1.2-EXPERIMENTAL/clslang/: __index__.py  _tokens.pyx  engine.pyx
CLSJS/: CLSJS.js  main.js  openserver.js  test.scls  test.scls.js  test.scls.json  test.scls.map
CLSJS/web/: app.scls  index.html
Process_Plugins/: hola.json  mod.json
cache/: final.py  lib.json  lib.py  log.json  page.html
lib/: prueba.scls
libpy/: fs.py  os.py  stdpyapi.py
py/: remplazo.py  test.py
py/kivy/: main.py
std/std/: fs  os
